--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-7.74MB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5603, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.51MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.44MB/s(Youtube:不良林), server: 113.31.109.30, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-3.13MB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-492.7KB/s(Youtube:不良林), server: oz.moonfree.top, port: 443, type: vmess, uuid: 9fbb6122-46e7-413b-b29d-749eef446c8d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: oz.moonfree.top}}
-  - {name: 🇯🇵 日本-3.76MB/s(Youtube:不良林), server: 150.230.4.136, port: 11151, type: vmess, uuid: 18ef8b86-5dfe-48a9-b4e4-b5f595f7e555, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.21MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.72MB/s(Youtube:不良林), server: usa005.369boy.com, port: 15001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: usa005.369boy.com, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.65MB/s(Youtube:不良林), server: usa004.369boy.com, port: 14001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: usa004.369boy.com, skip-cert-verify: true}
+  - {name: 🇿🇦 南非-200.2KB/s(Youtube:不良林), server: 102.130.121.237, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
+  - {name: 🇨🇳 中国-7.74MB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5603, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-644.1KB/s(Youtube:不良林), server: cd.rutracker-cn.com, port: 443, type: trojan, password: ukMzuFSmIXDvgW0h, sni: cd.rutracker-cn.com, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.19MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-1.38MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.06MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.85MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.77MB/s(Youtube:不良林), server: kr01.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr01.wangxd.life, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-492.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.65MB/s(Youtube:不良林)
+      - 🇿🇦 南非-200.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-644.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.38MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-492.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.65MB/s(Youtube:不良林)
+      - 🇿🇦 南非-200.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-644.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.38MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-492.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.65MB/s(Youtube:不良林)
+      - 🇿🇦 南非-200.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-644.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.38MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-1.38MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-492.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.65MB/s(Youtube:不良林)
+      - 🇿🇦 南非-200.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-644.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.38MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-492.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.65MB/s(Youtube:不良林)
+      - 🇿🇦 南非-200.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-644.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.38MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-492.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.65MB/s(Youtube:不良林)
+      - 🇿🇦 南非-200.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-644.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.38MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-492.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.65MB/s(Youtube:不良林)
+      - 🇿🇦 南非-200.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-644.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.38MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
