--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,67 +5,68 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-409.2KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇺🇸 美国-5.47MB/s(Youtube:不良林), server: usa005.369boy.com, port: 15001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: usa005.369boy.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.10MB/s(Youtube:不良林), server: 167.172.135.97, port: 25453, type: ss, cipher: aes-256-cfb, password: a40ff797db5c4b948cfe5a5234a0e74c}
-  - {name: 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.46MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.35MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.01MB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5601, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.85MB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-399.6KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇭🇰 香港-278.6KB/s(Youtube:不良林), server: 165.154.225.230, port: 33080, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
   - {name: 🇬🇧 英国-2.61MB/s(Youtube:不良林), server: 152.89.210.105, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 🇬🇧 英国-3.11MB/s(Youtube:不良林), server: 152.89.210.105, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
   - {name: 🇭🇰 香港-893.7KB/s(Youtube:不良林), server: 148.66.56.99, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇭🇰 香港-1.31MB/s(Youtube:不良林), server: 148.66.56.99, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-4.14MB/s(Youtube:不良林), server: dajbxus.naikonode.top, port: 15105, type: ssr, cipher: chacha20-ietf, password: NaikoCloud, protocol: auth_aes128_md5, obfs: http_simple, protocol-param: 1596:vsqvobohcqs, obfs-param: 6371f1596.microsoft.com}
+  - {name: 🇬🇧 英国-2.98MB/s(Youtube:不良林), server: 152.89.210.105, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
+  - {name: 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-409.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-278.6KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.11MB/s(Youtube:不良林)
       - 🇭🇰 香港-893.7KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-409.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-278.6KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.11MB/s(Youtube:不良林)
       - 🇭🇰 香港-893.7KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-409.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-278.6KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.11MB/s(Youtube:不良林)
       - 🇭🇰 香港-893.7KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-278.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-893.7KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
       - 🔰 节点选择
@@ -74,47 +75,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-409.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-278.6KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.11MB/s(Youtube:不良林)
       - 🇭🇰 香港-893.7KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-409.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-278.6KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.11MB/s(Youtube:不良林)
       - 🇭🇰 香港-893.7KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-409.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-278.6KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.11MB/s(Youtube:不良林)
       - 🇭🇰 香港-893.7KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +131,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-409.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-399.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-278.6KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.61MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.11MB/s(Youtube:不良林)
       - 🇭🇰 香港-893.7KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
